// Copyright 2015 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package distributor;

import "github.com/tetrafolium/luci-go/dm/api/distributor/jobsim/jobsim.proto";
import "github.com/tetrafolium/luci-go/dm/api/distributor/swarming/v1/config.proto";

message Alias {
  string other_config = 1;
}

message Distributor {
  reserved 2; // future: generic pRPC based distributor
  reserved 3; // future: generic gRPC based distributor

  // TODO(iannucci): Maybe something like Any or extensions would be a better
  // fit here? The ultimate goal is that users will be able to use the proto
  // text format for luci-config. I suspect that Any or extensions would lose
  // the ability to validate such text-formatted protobufs, but maybe that's
  // not the case.
  oneof distributor_type {
    Alias alias = 1;

    swarmingV1.Config swarming_v1 = 4;

    // this is for testing purposes and will only be used in production to put
    // test load on DM. It's tagged at 2048 to keep it well out of the way.
    jobsim.Config jobsim = 2048;
  }
}

message Config {
  map<string, Distributor> distributor_configs = 1;
}
